<resources>
    <string name="app_name">SmartriumClock</string>
    <string name="title_all">All</string>
    <string name="title_dust">dust</string>
    <string name="title_ultra">ultra_dust</string>
    <string name="title_super_ultra_dust">super_ultra_dust</string>
    <string name="title_setting">setting</string>
    <string name="notification_channel_id">notification</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="dust_all">전체</string>
    <string name="dust">미세</string>
    <string name="ultra_dust">초미세</string>
    <string name="super_ultra_dust">극초미세</string>
    <string name="setting">관리</string>
    <string name="channel_id">smart_rium</string>
    <string name="notification_channel_dust_title">미세 먼지 나쁨!</string>
    <string name="notification_channel_dust_description">식물을 케어해 주세요!</string>
    <string name="notification_channel_ultra_dust_title">초미세 먼지 나쁨</string>
    <string name="notification_channel_ultra_dust_description">식물을 케어해주세요!</string>
    <string name="notification_channel_super_ultra_dust_title">극초미세 먼지 나쁨</string>
    <string name="notification_channel_super_ultra_dust_description">식물을 케어해주세요!</string>


    <string name="notification_channel_dust_title_good">미세 먼지 좋음!</string>
    <string name="notification_channel_dust_description_good">미세먼지가 좋아지고 있어요!</string>
    <string name="notification_channel_ultra_dust_title_good">초미세 먼지 좋음!</string>
    <string name="notification_channel_ultra_dust_description_good">초미세먼지가 좋아지고 있어요!</string>
    <string name="notification_channel_super_ultra_dust_title_good">극초미세 먼지 좋음!</string>
    <string name="notification_channel_super_ultra_dust_description_good">극초미세먼지가 좋아지고 있어요!</string>


    <string name="notification_channel_temper_title">온도 낮음!</string>
    <string name="notification_channel_temper_description">식물을 케어해 주세요!</string>
</resources>
