<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">
	
	<item
		android:id="@+id/navigation_all"
		android:icon="@drawable/all_icon"
		android:title="@string/dust_all"/>
	
	<item
		android:id="@+id/navigation_dust"
		android:icon="@drawable/dust_icon"
		android:title="@string/dust"/>
	
	<item
		android:id="@+id/navigation_ultra_dust"
		android:icon="@drawable/ultra_dust_icon"
		android:title="@string/ultra_dust"/>
	
	<item
		android:id="@+id/navigation_super_ultra_dust"
		android:icon="@drawable/super_ultra_dust_icon"
		android:title="@string/super_ultra_dust"/>
	
	<item
		android:id="@+id/navigation_setting"
		android:icon="@drawable/setting_icon"
		android:title="@string/setting"/>

</menu>
